2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Removed an incorrect fix.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Switched to implemented RepeatButton.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* Button.cs, CheckBox.cs, Label.cs, ProgressBar.cs, RadioButton.cs, Slider.cs: Let WPF load theme styles automatically.