@@ -1,3 +1,7 @@
+2007-05-26  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* Slider.cs: Fixed to support IsDirectionReversed and Orientation.
+
 2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* Slider.cs: Removed an incorrect fix.
